@@ -20,6 +20,7 @@ trunk
 * added "omxGreaterThan", "omxLessThan", "omxApproxEquals", "omxAnd", and "omxOr" operators to the set of mxAlgebra() operators
 * error checking for model[[1]] or model[[TRUE]]
 * error checking in the front-end whether more than 20 ordinal columns are present in a data set
+* improved performance in the front-end in mxModel() for adding paths to RAM models
 
 Pre-Release 999.0.0-1527 (January 6, 2011)
 ==========================================
